--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
 
 body {
   background-color: #f8f8f8;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 @layer base {
